--- a/shop/templates/shop/shop_now.html
+++ b/shop/templates/shop/shop_now.html
@@ -325,7 +325,7 @@
                 <div class="row justify-content-center mb-5">
                     <div class="col-md-8 text-center heading-section ftco-animate">
 
-                        <a href="{% url 'shop:testing' %}">
+                        <a href="{% url 'shop:cart' %}">
                             <h2 class="mb-3">Heading</h2>
                         </a>
 
