--- a/pro_farm/templates/new_index.html
+++ b/pro_farm/templates/new_index.html
@@ -8,11 +8,14 @@
 
     <!-- ------------------
         links --------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.boomcdn.com/libs/owl-carousel/2.3.4/assets/owl.carousel.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper@4.5.0/dist/css/swiper.min.css">
     <link rel="stylesheet" href="..\static\css\new_style.css">
     <link rel="stylesheet" href="..\static\css\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
         
         /* --------- navbar ---------- */
@@ -194,8 +197,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6" style="margin: 2em; position: relative; top:200px;">
-                        <h1 style="color:white">Kissan Tech</h1>
-                        <p style="color:white">well rooted to nature</p>
+                        <h1 class="animation-heading-1" style="color:white">Kissan Tech</h1>
+                        <p class="animation-heading-3" style="color:white">well rooted to nature</p>
                     </div>
                     <div class="col-md-4" style="position: relative; top:200px;">
                         <div class="col-md-3"><br></div>
@@ -205,7 +208,7 @@
                                     style="border-radius: 50%; width: 150px; height: 150px; cursor: pointer;" onclick="openNav()" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="animation-heading-4">
                             <h2 style="color:white">Name- ooiiii</h2>
                             <p style="color:white; position:relative; left: 20px;">number - 1234567890</p>
                         </div>
@@ -219,8 +222,8 @@
         Heading for main features ------------ -->
     <main>
         <div class="texting">
-                <h2> OUR SPECIAL FEATURES </h2>
-                <h3>HERE YOU WILL GET THE INFORMATION OF WEATHER OF YOUR LOCATION, FINANCIAL
+                <h2 class="animation-heading-5"> OUR SPECIAL FEATURES </h2>
+                <h3 class="animation-heading-2">HERE YOU WILL GET THE INFORMATION OF WEATHER OF YOUR LOCATION, FINANCIAL
                 HELP AND FERTILIZERS SUITABLE FOR YOUR CROPS!!
                 </h3>
         </div>
@@ -230,42 +233,43 @@
         cards ------------------------ -->
     <main>
         <!-- <div class="container"> -->
-            <div class="card-body">
+            <div class="card-body animation-heading-6">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="card" style="background-color: #211b3a;">
                                 <div class="sliderText">
-                                    <h3>Slide One</h3>
+                                    <h3> Weather Forecast </h3>
                                 </div>
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore porro, in tenetur aliquid
-                                        inventore deserunt necessitatibus eveniet quis sit, ratione nesciunt, hic at ut quisquam
-                                        maxime corrupti adipisci! Voluptates.</p>
+                                    <p> Sunshine is delicious, rain is refreshing, wind braces us up, snow is exhilarating; there is really no such thing as bad weather, only different kinds of good weather. <br> check climate conditions.
+                                    </p>
+                                    <button type="submit">Continue</button>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="card" style="background-color: #211b3a;">
                                 <div class="sliderText">
-                                    <h3>Slide Two</h3>
+                                    <h3>Financial Help</h3>
                                 </div>
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore porro, in tenetur aliquid
-                                        inventore deserunt necessitatibus eveniet quis sit, ratione nesciunt, hic at ut quisquam
-                                        maxime corrupti adipisci! Voluptates.</p>
+                                    <p>Our incomes are like our shoes; if too small, they gall and pinch us; but if too large, they cause us to stumble and to trip. <br> We provide benifits of amazing loan and
+                                    insurance offers.
+                                    </p>
+                                    <button type="submit">Continue</button>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="card" style="background-color: #211b3a;">
                                 <div class="sliderText">
-                                    <h3>Slide Three</h3>
+                                    <h3>Shop Now</h3>
                                 </div>
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore porro, in tenetur aliquid
-                                        inventore deserunt necessitatibus eveniet quis sit, ratione nesciunt, hic at ut quisquam
-                                        maxime corrupti adipisci! Voluptates.</p>
+                                    <p>Our values are that we do think that people have a right to privacy. And that our customers are not our products. <br> we provide appropriate materials for your crop at best price.
+                                    </p>
+                                    <button type="submit" >Continue</button>
                                 </div>
                             </div>
                         </div>
@@ -277,7 +281,9 @@
                                 <div class="content">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore porro, in tenetur aliquid
                                         inventore deserunt necessitatibus eveniet quis sit, ratione nesciunt, hic at ut quisquam
-                                        maxime corrupti adipisci! Voluptates.</p>
+                                        maxime corrupti adipisci! Voluptates.
+                                    </p>
+                                    <button type="submit">Continue</button>
                                 </div>
                             </div>
                         </div>
@@ -289,7 +295,9 @@
                                 <div class="content">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore porro, in tenetur aliquid
                                         inventore deserunt necessitatibus eveniet quis sit, ratione nesciunt, hic at ut quisquam
-                                        maxime corrupti adipisci! Voluptates.</p>
+                                        maxime corrupti adipisci! Voluptates.
+                                    </p>
+                                    <button type="submit">Continue</button>
                                 </div>
                             </div>
                         </div>
@@ -297,6 +305,102 @@
                 </div>
             </div>
         <!-- </div> -->
+    </main>
+
+    <!-- ---------------------
+        video ------------ -->
+    <main>
+        <div class="container">
+            <h1 class="newh1 animation-heading-7">Youtube videos</h1>
+            <div class="videos">
+                <div class="owl-carousel animation-heading-8">
+                    <div class="item-video">
+                        <iframe class="owl-video" href="https://www.youtube.com/embed/vHm9_MN8jRA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="item-video">
+                        <iframe class="owl-video" href="https://www.youtube.com/watch?v=8x1mO1d6-4w" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="item-video" data-merge="2">
+                        <iframe class="owl-video" href="https://www.youtube.com/watch?v=wHFflWvii3M" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="item-video">
+                        <iframe class="owl-video" href="https://www.youtube.com/watch?v=wHFflWvii3M"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="owl-dots"></div>
+                    <div class="owl-dot">
+                        <span class="active"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- ----------------------------
+        footer section ---------- -->
+    <main>
+        <footer>
+            <div class="main-content">
+                <div class="left box">
+                    <h2>About us</h2>
+                    <div class="content">
+                        <p>CodinNepal is a YouTube channel where you can learn web designing, web development, ui/ux designing,
+                            html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.
+                        </p>
+                        <div class="social">
+                            <a href="https://facebook.com/coding.np"><span class="fab fa-facebook-f"></span></a>
+                            <a href="#"><span class="fab fa-twitter"></span></a>
+                            <a href="https://instagram.com/coding.np"><span class="fab fa-instagram"></span></a>
+                            <a href="https://youtube.com/c/codingnepal"><span class="fab fa-youtube"></span></a>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="center box">
+                    <h2>Address</h2>
+                    <div class="content">
+                        <div class="place">
+                            <span class="fas fa-map-marker-alt"></span>
+                            <span class="texts">Birendranagar, Surkhet</span>
+                        </div>
+                        <div class="phone">
+                            <span class="fas fa-phone-alt"></span>
+                            <span class="texts">+089-765432100</span>
+                        </div>
+                        <div class="email">
+                            <span class="fas fa-envelope"></span>
+                            <span class="texts">abc@example.com</span>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="right boxes">
+                    <h2>Contact us</h2>
+                    <div class="content">
+                        <form action="#">
+                            <div class="email">
+                                <div class="texts email-text">Email *</div>
+                                <input type="email" required>
+                            </div>
+                            <div class="msg">
+                                <div class="texts">Message *</div>
+                                <textarea rows="2" cols="25" required></textarea>
+                            </div>
+                            <div class="btn">
+                                <button type="submit">Send</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <center>
+                    <span class="credit">Created with <span class="fa fa-heart"></span> by <a href="#">Procoders</a> | </span>
+                    <span class="far fa-copyright"></span><span> 2020 All rights reserved.</span>
+                </center>
+            </div>
+        </footer>
     </main>
 
     <!-- ----------------------
@@ -366,6 +470,85 @@
                 el: '.swiper-pagination',
             },
         });
+    </script>
+    <!-- ---------------- video ------------------ -->
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.boomcdn.com/libs/owl-carousel/2.3.4/owl.carousel.min.js"></script>
+
+    <script>
+        $(".owl-carousel").owlCarousel({
+            margin: 10,
+            merge: true,
+            loop: true,
+            video:true,
+            center: true,
+        });
+    </script>
+
+
+    <!-- ------------- scrolling animation --------------- -->
+    <script src="https://pagecdn.io/lib/waypoints/4.0.1/jquery.waypoints.min.js" crossorigin="anonymous"
+        integrity="sha256-jDnOKIOq2KNsQZTcBTEnsp76FnfMEttF6AV2DF2fFNE="></script>
+    <script>
+
+        $(document).ready(function(){
+            $('.animation-heading-1').waypoint(function(direction){
+                $('.animation-heading-1').addClass('animated zoomIn')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-2').waypoint(function (direction) {
+                $('.animation-heading-2').addClass('animated fadeInUp')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-3').waypoint(function (direction) {
+                $('.animation-heading-3').addClass('animated jello')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-4').waypoint(function (direction) {
+                $('.animation-heading-4').addClass('animated fadeIn')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-5').waypoint(function (direction) {
+                $('.animation-heading-5').addClass('animated fadeInUp')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-6').waypoint(function (direction) {
+                $('.animation-heading-6').addClass('animated rotateInDownLeft')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-7').waypoint(function (direction) {
+                $('.animation-heading-7').addClass('animated rubberBand')
+            }, {
+                offset: '50%'
+            })
+        });
+        $(document).ready(function () {
+            $('.animation-heading-8').waypoint(function (direction) {
+                $('.animation-heading-8').addClass('animated fadeIn')
+            }, {
+                offset: '50%'
+            })
+        });
+
     </script>
 
 
